--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 body{
     font-family: 'Roboto',sans-serif;
-    background-color: #ececec;
+    background-color: #ececec !important;
 }
 nav{
     width: 100%;
@@ -29,10 +29,20 @@ nav ul li a{
 
 .deals_container{
     display: inline-block;
-    background-color: #fff;
-    box-shadow: 1px 1px 1px 1px #d8d8d8;
     padding: 0px !important;
     height: 365px;
+    margin: 20px 0px;
+}
+
+.deals_container_wrapper{
+    width: 90%;
+    margin: 0 auto;
+    box-shadow: 1px 1px 1px 1px #d8d8d8;
+    background-color: #fff;
+}
+
+.deals_top_row{
+    padding: 20px 0px;
 }
 
 .deals_wrapper{
@@ -56,10 +66,12 @@ nav ul li a{
 .deal_title{
     font-size: 15px;
     font-weight: bold;
+    margin-left: 20px;
 }
 
 .deal_price{
     padding-top: 55px;
+    margin-left: 20px;
 }
 #current_price{
     color: #1a77d2;
@@ -99,6 +111,10 @@ nav ul li a:hover{
     text-decoration: none;
 }
 
+nav ul li a:focus{
+    color: #fff;
+    text-decoration: none;
+}
 .get_deals a:hover{
     text-decoration: none;
     background-color: #57bb63;
@@ -109,11 +125,40 @@ nav ul li a:hover{
     padding: 14px 0px;
 }
 
+#user_name{
+    font-size: 12px;
+    color: gray;
+}
 #deals_heading_title{
     font-size: 12px;
     padding: 14px;
     font-weight: bold;
     color: #57bb63;
+}
+
+#categories,#merchants{
+    font-size: 12px;
+    padding: 14px;
+    color: #000;
+}
+
+.deals_heading{
+    margin: 20px 0px;
+    background-color: #fff;
+    width: 97.5%;
+    margin: 0 auto;
+}
+
+.category_page,
+.coupons_page,
+.price_comparision,
+.forums{
+    position: absolute;
+    padding: 0 40%;
+    top: 50%;
+    transform: translateY(-50%);
+    text-align: center;
+    color: #000;
 }
 /*------------Overwriting the default styles----------*/
 p{
